istio/gateway.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpsserver
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - cloudnative.jaquelee.com
      port:
        number: 80
        name: http
        protocol: HTTP
