istio/gateway2.yml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: httpserver-gw
  namespace: cloudnative
spec:
  selector:
    istio: ingressgateway
  servers:
  - hosts:
    - cloudnative.jaquelee.com
    port:
      name: https-default
      number: 443
      protocol: HTTPS
    tls:
      credentialName: cloudnative-other-tls
      mode: SIMPLE
